--- a/css/style.css
+++ b/css/style.css
@@ -398,8 +398,8 @@ body{
   .contacto{
     display: flex;
     flex-direction: column;
-    height: 46em;
-    padding: 1em 1em;
+    height: 40em;
+    padding: 2em 1em;
   }
 
   .contenido__contacto img{
@@ -419,7 +419,7 @@ body{
     position: absolute;
     text-align: center;
     margin-left: 3em;
-    padding-top: 80px;
+    padding-top: 4em;
     height: 45%;
     font-size: 19px;
   }
@@ -431,7 +431,7 @@ body{
   .contacto_formulario{
     position: absolute;
     margin-right: 20em;
-    margin-top: 28em;
+    margin-top: 21em;
     width: 20em;
   }
 
