--- a/css/todos-los-productos.css
+++ b/css/todos-los-productos.css
@@ -68,13 +68,13 @@
 
   .total_productos{
     padding-top: 2em;
-    padding-bottom: 0cd;
+    padding-bottom: 0;
   }
 
   .total_selec_productos{
     display: flex;
     flex-direction: column;
-    padding: .3em;
+    padding: 1em;
   }
 
   .total_productos__titulo{
@@ -90,7 +90,7 @@
     display: flex;
     flex-direction: column;
     margin: 0;
-    padding: .7em;
+    padding: 1.345em;
   }
 
   .trash_icon{
