--- a/css/todos-los-productos.css
+++ b/css/todos-los-productos.css
@@ -74,7 +74,7 @@
   .total_selec_productos{
     display: flex;
     flex-direction: column;
-    padding: 1em;
+    padding: .3em;
   }
 
   .total_productos__titulo{
@@ -90,7 +90,7 @@
     display: flex;
     flex-direction: column;
     margin: 0;
-    padding: 1.345em;
+    padding: .7em;
   }
 
   .trash_icon{
